# iQuCodeFest-TeamA-Submission

./: .env.example  README.md  presentation.pptx  pyproject.toml  requirements.txt
checkpoints/: qcnn_weights.npz
data/preprocessed/: q_train_class_names.npy  q_train_images.npy  q_train_labels.npy
notebook/: BrainTumor-dataset.ipynb  QOS-sketching.py
references/: tutorial_quanvolution.py
side_quests/challenge_01_quantum_vision_fundamentals/: frqi_challenge_fr.ipynb
side_quests/challenge_02_generative_quantum_art/: frqi_pattern_generation_challenge_en.ipynb
side_quests/challenge_03_qml_image_classification/: qml_FR.ipynb
src/: dataset_loader.py  diagnose_bias.py  feature_extraction.py  hardware_execution.py  inference.py  main.py  plotting.py  qcnn.py  quanvolution_layer.py  train.py  tumorApp.py  utils_images.py
tests/: test_quanvolution_layer.py
