[project]
name = "python-with-ci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "qiskit>=2.4.1",
    "qiskit-ibm-runtime>=0.47.0",
    "qiskit-machine-learning>=0.9.0",
    "visualtorch>=0.2.4",
]

[dependency-groups]
dev = ["pytest>=9.0.3", "ruff>=0.15.13"]

[tool.pytest]
pythonpath = ["src"]
