[project]
name = "python-with-ci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "matplotlib>=3.10.0",
    "matplotlib>=3.10.9",
    "qiskit>=2.4.1",
    "qiskit-ibm-runtime>=0.47.0",
    "qiskit-machine-learning>=0.9.0",
    "torchvision>=0.27.0",
    "visualtorch>=0.2.4",
    "pylatexenc>=2.10",
    "torch>=2.12.0",
]

[dependency-groups]
dev = ["pytest>=9.0.3", "ruff>=0.15.13"]

[tool.pytest]
pythonpath = ["src"]
